@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-11-30T08:26:53Z",
+  "timestamp" : "2022-11-30T16:29:54Z",
   "count_outdated" : 898,
   "uniques_outdated" : 472,
-  "count" : 921,
-  "uniques" : 485,
+  "count" : 920,
+  "uniques" : 484,
   "clones" : [
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
