@@ -1,11 +1,11 @@
 {
-  "count": 23,
-  "uniques": 3,
+  "count": 22,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-11-17T00:00:00Z",
