@@ -1,3 +1,11 @@
+2022-11-30T16:29:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3585188578 # 1080
+* notice: last 14d: unq all: 2 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 472 898 / 485 921
+* notice: next accum: outdated-unq outdated-all / unq all: 472 898 / 484 920
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-30T08:26:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3581562170 # 1079
 * notice: last 14d: unq all: 3 23
